Fix Control recovery edge cases